--- a/views/index.jade
+++ b/views/index.jade
@@ -38,6 +38,8 @@ block content
               | .
         div#chart
           div.ct-chart
+        div#end-of-year-notice
+          p We are nearing the end of the year. You can use the export function to save this year's data.
         div#quoteOfTheDay
           p Loading...
         div#footer
@@ -52,12 +54,6 @@ block content
               a(href="#" data-menu="clear") Clear data
             li
               a(href="#" data-menu="about") About
-          ul.social
-            li
-              a.twitter-share-button(href='https://twitter.com/intent/tweet?text=Start+tracking+your+year+and+how+you+feel+in+pixels', data-size='large')
-                | Tweet
-            li
-              iframe(src='https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fyear-in-pixels.glitch.me%2F&layout=button_count&size=large&mobile_iframe=true&appId=132593400164506&width=84&height=28', width='95', height='28', style='border:none;overflow:hidden', scrolling='no', frameborder='0', allowtransparency='true')
 
   #menu
     #importDialog.dialog
@@ -73,24 +69,27 @@ block content
       textarea(id="exportMoodText", onclick="this.focus();this.select()", readonly="readonly")
     #aboutDialog.dialog
       a.close(href="#") X
-      h3 Hello there and thank you
-      p First of all, thank you for your interest in this little tool.
+      h3 Welcome to Year in Pixels
       p This tool was made to keep track of your mood during the entire year, using pixels. You can load this page every day and select how you're feeling. The tool will keep track of your mood and give you a visual for how you've felt during the year.
-      p If you use different browsers or computers, you can import/export your calendar too.
-      p Credits to Camille (@passioncarnets), the original creator of this format.
-      h3 About the author
+      p This tool is very privacy minded, it doesn't use any cookies and doesn't track you in any way. The data is stored in your browser only and is not sent to any server. It has no Google Analytics or other social media trackers. Therefor, if you use different browsers or computers, you can import/export your calendar too.
+      h3 Credits
+      ul
+        li
+          a(href="https://www.instagram.com/p/BQ4xJtYj7Yx/") @passioncarnets
+          | , the original creator of this format.
+        li
+          a(href="http://kinduff.com") Alejandro AR (@kinduff)
+          | , the initial creator of this tool.
+        li
+          a(href="http://schep.me") @schep_
+          | for adding PWA support!
+      br
+      h3 About this version
       p
-        | My name is Alejandro AR 
-        | (
-        a(href="http://kinduff.com") @kinduff
-        | )
-        | and I enjoy making little tools that help people out.
-      h3 Thanks to the contributors!
-      p
-        | Thank you 
-        a(href="http://schep.me") @schep_
-        | for adding PWA support!
-      p Thanks for passing by.
+        | I was using Year In Pixels, but the tool of Alejandro seemed not to be maintained anymore and taken offline by the provider.
+        | So I decided to update it so it could be deployed again. I also did some style enhancements, stripped all trackers and fixed the Quote of the Day.
+        | For more free software I created, check out
+        a(href="https://jeroenpeters.dev") jeroenpeters.dev
 
   script(type='text/javascript').
     var moodOptions = !{JSON.stringify(moodOptions)}
