--- a/views/index.jade
+++ b/views/index.jade
@@ -39,7 +39,7 @@ block content
         div#chart
           div.ct-chart
         div#end-of-year-notice
-          p We are nearing the end of the year. You can use the export function to save this year's data.
+          p ℹ️ We are nearing the end of the year. You can use the export function to save this year's data.
         div#quoteOfTheDay
           p Loading...
         div#footer
