--- a/public/font.css
+++ b/public/font.css
@@ -1,7 +1,6 @@
 @font-face {
   font-family: icofont;
-  src: url(https://cdn.glitch.com/e7b50d85-6473-4a0f-9575-f45e36b88b3e%2Ficofont.eot??v=1.0.0-beta);
-  src: url(https://cdn.glitch.com/e7b50d85-6473-4a0f-9575-f45e36b88b3e%2Ficofont.eot??v=1.0.0-beta#iefix) format('embedded-opentype'), url(https://cdn.glitch.com/e7b50d85-6473-4a0f-9575-f45e36b88b3e%2Ficofont.ttf??v=1.0.0-beta) format('truetype'), url(https://cdn.glitch.com/e7b50d85-6473-4a0f-9575-f45e36b88b3e%2Ficofont.woff?v=1.0.0-beta) format('woff'), url(https://cdn.glitch.com/e7b50d85-6473-4a0f-9575-f45e36b88b3e%2Ficofont.svg?v=1.0.0-beta#icofont) format('svg');
+  src: url('icofont.woff?v=1.0.0-beta') format('woff'), url('icofont.svg?v=1.0.0-beta#icofont') format('svg');
   font-weight: 400;
   font-style: normal
 }
